Add network loading and saving functionality in MemoryNeuralNetworkTest; enhance transient field initialization in ValuesNeuronValueFunction